# virtrootfs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: assert.c  file.c  getattr.c  init.c  main.c  open.c  opendir.c  readdir.c  resolve.c  util.c  virtrootfs.h  vr_fuse.h  vr_hardcode.h  vr_open.c  vr_ops.h  vr_utils.c  vr_utils.h  vrfs_ops.h
